force-app/main/default/objects/Shipment__c/fields/Date_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Date_Shipped__c</fullName>
    <inlineHelpText
  >The date the shipment was sent to the courier.</inlineHelpText>
    <label>Date Shipped</label>
    <type>Date</type>
</CustomField>