force-app/main/default/objects/Shipment__c/fields/Delivered__c.field-meta.xml
<CustomField>
    <fullName>Delivered__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText
  >To be checked manually when a user reviews a shipment and confirms it was delivered.</inlineHelpText>
    <label>Delivered</label>
    <type>Checkbox</type>
</CustomField>