force-app/main/default/objects/Shipment__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Events__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Custom Event, Standard Event</value>
        </filterItems>
        <infoMessage
    >Default search includes Standard or Custom Events.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Events__c</referenceTo>
    <relationshipLabel>Shipments</relationshipLabel>
    <relationshipName>Event_Shipments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>