force-app/main/default/objects/Shipment__c/fields/Event_Status__c.field-meta.xml
<CustomField>
    <fullName>Event_Status__c</fullName>
    <formula>TEXT(Event__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Status</label>
    <type>Text</type>
</CustomField>