force-app/main/default/objects/Shipment__c/fields/Shipment_Contents__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Contents__c</fullName>
    <label>Shipment Contents</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Industry Insider</fullName>
            </value>
            <value>
                <fullName>Logistics Materials</fullName>
            </value>
            <value>
                <fullName>Sponsor Notebooks</fullName>
            </value>
            <value>
                <fullName>Sponsor Conference Bags</fullName>
            </value>
            <value>
                <fullName>Sponsor Lanyards</fullName>
            </value>
            <value>
                <fullName>Blank Lanyards</fullName>
            </value>
            <value>
                <fullName>Magazines</fullName>
            </value>
            <value>
                <fullName>Signs</fullName>
            </value>
            <value>
                <fullName>Stage Signs</fullName>
            </value>
            <value>
                <fullName>Registration Box</fullName>
            </value>
            <value>
                <fullName>Registration Badges</fullName>
            </value>
            <value>
                <fullName>Wifi HotSpot</fullName>
            </value>
            <value>
                <fullName>Awards</fullName>
            </value>
            <value>
                <fullName>Ad Board #1 Materials</fullName>
            </value>
            <value>
                <fullName>Ad Board #2 Materials</fullName>
            </value>
            <value>
                <fullName>Ad Board #3 Materials</fullName>
            </value>
            <value>
                <fullName>AWS</fullName>
            </value>
            <value>
                <fullName>DELL</fullName>
            </value>
            <value>
                <fullName>SOCURE</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>