force-app/main/default/objects/Shipment__c/fields/Shipment_Direction__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Direction__c</fullName>
    <label>Shipment Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To Event</fullName>
            </value>
            <value>
                <fullName>Return From Event</fullName>
            </value>
            <value>
                <fullName>Event to Event</fullName>
            </value>
            <value>
                <fullName>To Ad Board</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>