force-app/main/default/objects/Shipment__c/fields/Shipment_Method__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Method__c</fullName>
    <label>Shipment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2 Day</fullName>
            </value>
            <value>
                <fullName>3 Day</fullName>
            </value>
            <value>
                <fullName>Next Day</fullName>
            </value>
            <value>
                <fullName>Next Day - Early AM</fullName>
            </value>
            <value>
                <fullName>Ground</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>