force-app/main/default/objects/Shipment__c/fields/Shipment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Notes__c</fullName>
    <label>Shipment Notes</label>
    <type>TextArea</type>
</CustomField>