force-app/main/default/objects/Shipment__c/fields/Staff_Shipper__c.field-meta.xml
<CustomField>
    <fullName>Staff_Shipper__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >The e.Republic staff member who prepared the shipment for the courier.</description>
    <inlineHelpText
  >The e.Republic staff member who prepared the shipment for the courier.</inlineHelpText>
    <label>Staff Shipper</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Staff_Shipper_Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>