force-app/main/default/objects/Shipment__c/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <description
  >The tracking number with no additional text, example: 1Z8322081393245123</description>
    <inlineHelpText
  >Insert the tracking number with no additional text, example: 1Z8322081393245123</inlineHelpText>
    <label>Tracking Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>