force-app/main/default/objects/Shipment__c/listViews/Upcoming_Events_Next_2_Weeks.listView-meta.xml
<ListView>
    <fullName>Upcoming_Events_Next_2_Weeks</fullName>
    <columns>NAME</columns>
    <columns>Event__c</columns>
    <columns>Courier__c</columns>
    <columns>Shipment_Contents__c</columns>
    <columns>Shipment_Direction__c</columns>
    <columns>Shipment_Method__c</columns>
    <columns>Date_Shipped__c</columns>
    <columns>Event_Start_Date__c</columns>
    <columns>Tracking_Number__c</columns>
    <columns>Tracking_URL__c</columns>
    <columns>Staff_Shipper__c</columns>
    <columns>Shipment_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event_Start_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>NEXT_N_WEEKS:2</value>
    </filters>
    <filters>
        <field>Event_Start_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>Upcoming Events - Next 2 Weeks</label>
</ListView>